--- a/src/app/features/faq/faq.component.html
+++ b/src/app/features/faq/faq.component.html
@@ -1,7 +1,7 @@
 <main>
     <div class=" flex justify-center min-h-screen">
         <div class="max-w-xl w-full p-4 shadow-lg rounded-xl">
-            <h2 class="text-2xl font-bold mb-4">Česta pitanja</h2>
+            <h2 class="text-2xl font-bold mb-4">{{ "COMMON_QUESTIONS" | translate }}</h2>
     
             <div *ngFor="let item of faqItems; let i = index" class="mb-2">
                 <button
