--- a/src/app/wip/wip.component.html
+++ b/src/app/wip/wip.component.html
@@ -1,6 +1,6 @@
 <div class=" flex items-center justify-center">
     <div class="text-center">
-        <h1 class="text-4xl font-bold mb-4 text-white">Trenutno u izradi</h1>
+        <h1 class="text-4xl font-bold mb-4 text-white">{{ "PROGRESS" | translate}}</h1>
 
         <!-- Progress Bar -->
         <div class="w-64 h-4 bg-gray-700 rounded-full overflow-hidden mx-auto">
