--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -86,21 +86,21 @@
 
         <!-- Right side: Language Dropdown -->
         <div
-            class="relative flex items-center mx-2 md:order-2 gap-1 md:gap-0 rounded-lg border border-transparent hover:bg-gray-700">
+        class="relative flex items-center mx-2 md:order-2 gap-1 md:gap-0 rounded-lg border border-transparent hover:bg-gray-700 transition-colors duration-200">
             <button (click)="toggleLangDropdown()" type="button" data-dropdown-toggle="language-dropdown-menu"
-                class="inline-flex items-center font-medium justify-center px-4 py-2 text-sm text-white rounded-lg cursor-pointer inset-shadow-sm">
+            class="inline-flex items-center font-medium justify-center px-4 py-2 text-sm text-white rounded-lg cursor-pointer inset-shadow-sm transition-colors duration-200">
                 {{ siteLanguage }} ▼
             </button>
             <div *ngIf="langDropdownOpen"
-                class="absolute items-center fit-container top-6 z-50 my-4 text-base list-none bg-white/5 divide-white rounded-lg shadow-md"
+            class="absolute items-center fit-container top-6 w-33 z-50 my-4 text-base list-none bg-white/5 divide-white rounded-lg shadow-md user-select-none cursor-pointer transition-colors duration-200"
                 id="language-dropdown-menu">
                 <ul class="px-2 my-auto font-medium fit-container">
                     <li *ngFor="let lang of languageList" (click)="changeSiteLanguage(lang.code)"
-                        class="block px-4 py-2 mx-1 fit-container text-zinc-200 hover:bg-gray-600 hover:text-white">
-                        <div class="inline-flex fit-container items-center">
-                            {{ lang.label }}
-                        </div>
-                    </li>
+                    class="block px-4 py-2 mx-1 fit-container text-zinc-200 hover:bg-gray-600 hover:text-white transition-colors duration-200 rounded-lg">
+                  <div class="inline-flex fit-container items-center">
+                    {{ lang.label }}
+                  </div>
+                </li>
                 </ul>
             </div>
         </div>
