--- a/src/app/features/donations/donations.component.html
+++ b/src/app/features/donations/donations.component.html
@@ -4,6 +4,8 @@
 </div>
 
 <a class="custom-button top-1/2 md:-translate-y-[55%] -translate-y-[-50%] md:-translate-x-[0%] -translate-x-[25%]"
-  href="http://blokadnedonacije.rs" target="_blank">
-  {{ "DONATIONS" | translate }}
+   href="http://blokadnedonacije.rs"
+   target="_blank"
+   [attr.data-tooltip]="'DONATIONS.BUTTON_TOOLTIP' | translate">
+   {{ "DONATIONS.BUTTON_TEXT" | translate }}
 </a>
