Add translation for Donations title in navigation bar

--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
                         "ZAHTEVI"
                         | translate }}</a></li>
                 <li><a class="nav-link hover:text-red-500 hover:underline hover:font-bold focus:text-red-500 focus:underline focus:font-bold"
-                        routerLink="/donations" routerLinkActive="active">{{ "DONATIONS" | translate }}</a></li>
+                        routerLink="/donations" routerLinkActive="active">{{ "DONATIONS_TITLE" | translate }}</a></li>
                 <li><a class="nav-link hover:text-red-500 hover:underline hover:font-bold focus:text-red-500 focus:underline focus:font-bold"
                         routerLink="/announcements" routerLinkActive="font-bold">{{ "NAJAVE" | translate }}</a></li>
                 <li><a class="nav-link hover:text-red-500 hover:underline hover:font-bold focus:text-red-500 focus:underline focus:font-bold"
