Update FAQ translations and fix navigation label in Serbian

--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -46,7 +46,7 @@
                 <li>
                     <a class="nav-link hover:text-red-500 hover:underline hover:font-bold focus:text-red-500 focus:underline focus:font-bold"
                         routerLink="/donations" routerLinkActive="active">
-                        {{ "DONATIONS" | translate }}
+                        {{ "DONATIONS_TITLE" | translate }}
                     </a>
                 </li>
                 <li>
