Update donation component styles and enhance school name translations with with new schools update

--- a/src/app/features/donations/donations.component.css
+++ b/src/app/features/donations/donations.component.css
@@ -65,4 +65,12 @@
   :host ::ng-deep .popup-list li.visak:hover {
     color: skyblue;
   }
-  
+  :host ::ng-deep .group-header{
+    user-select : none;
+    cursor : default;
+  }
+
+  :host ::ng-deep .group-title{
+    user-select : none;
+    cursor : default;
+  }
