--- a/src/app/features/contact/contact.component.html
+++ b/src/app/features/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="text-lg bg-black text-green-500 font-mono border-2 shadow-[0_0_10px_rgba(0,255,0,0.8)] p-2.5 rounded-lg w-full max-w-[100%] md:max-w-[75%] mx-auto cursor-default">
+<div class="my-10 text-lg bg-black text-green-500 font-mono border-2 shadow-[0_0_10px_rgba(0,255,0,0.8)] p-2.5 rounded-lg w-full max-w-[100%] md:max-w-[75%] mx-auto cursor-default">
   <div class="bg-[#003300] p-1.25 text-green-500 font-bold text-left">
     <span class="pl-1.25">root&#64;terminal</span>
   </div>
