Even more styling cleanup

--- a/src/app/features/faq/faq.component.html
+++ b/src/app/features/faq/faq.component.html
@@ -1,7 +1,7 @@
 <main>
-    <div class="flex justify-center min-h-screen pt-10">
+    <div class="flex justify-center min-h-screen">
         <div
-            class="max-w-8xl w-full p-4 backdrop-filter backdrop-blur-lg bg-zinc-800/30 border-1 border-zinc-700/10 rounded-xl">
+            class="max-w-8xl w-full p-4 backdrop-filter backdrop-blur-lg bg-zinc-800/30 border-1 border-zinc-700/10 rounded-xl text-stone-100">
             <h2 class="mb-4">{{ "COMMON_QUESTIONS" | translate }}</h2>
 
             <div *ngFor="let item of faqItems; let i = index"
