--- a/src/app/features/donations/donations.component.html
+++ b/src/app/features/donations/donations.component.html
@@ -1,6 +1,6 @@
 <!-- Map Container -->
 <div
-  class="relative w-full min-h-[400px] max-w-[99%] md:max-w-[80%] lg:max-w-[1100px] mx-auto mt-8 md:mt-12 lg:mt-16 border-2 border-black rounded-lg overflow-hidden h-[50vh] md:h-[60vh]"
+  class="relative w-full min-h-[400px] max-w-[99%] md:max-w-[80%] lg:max-w-[1100px] mx-auto border-2 border-black rounded-lg overflow-hidden h-[50vh] md:h-[60vh]"
 >
   <div id="map" class="w-full h-full bg-gray-100 focus:outline-none">
     <!-- Button Container (Positioning for center alignment) -->
