--- a/src/app/features/donations/donations.component.html
+++ b/src/app/features/donations/donations.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <!-- Urgent List Container -->
-<div class="relative z-10 m-2 p-2 mt-4 md:mt-6">
+<div *ngIf="urgentList.length > 0" class="relative z-10 m-2 p-2 mt-4 md:mt-6">
   <h2 class="urgent-header text-2xl font-semibold text-red-500 mb-4">{{ "DONATIONS.URGENT" | translate }}</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
     <div *ngFor="let entry of urgentList" class="urgent-entry">
