Working on websocket for telegram integration

--- a/src/app/features/announcements/announcements.component.html
+++ b/src/app/features/announcements/announcements.component.html
@@ -1,1 +1,6 @@
-<app-wip></app-wip>
+<div>
+    <h2>WebSocket Messages</h2>
+    <ul>
+        <li *ngFor="let message of messages">{{ message.data }}</li>
+    </ul>
+</div>
