Added more fixes for the responsive design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="screen-stable">
         <div>
             <div class="hero">
-                <div *ngIf="showHero" class="h-screen">
+                <div *ngIf="showHero" class="h-screen container">
                     <app-typewriter [showHero]="showHero"></app-typewriter>
                 </div>
 
