--- a/src/app/features/demands/demands.component.html
+++ b/src/app/features/demands/demands.component.html
@@ -1,9 +1,9 @@
-<div class="text-white p-4 pt-0">
+<div class="text-white md:p-4 pt-0">
   <!-- Loop through accordion items -->
-  <div *ngFor="let item of accordionItems; let i = index" class="mb-2 font-content">
+  <div *ngFor="let item of accordionItems; let i = index" class="mb-2 font-content rounded-none md:rounded-md">
     <!-- Accordion Header -->
     <button
-      class="text-left rounded accordion-header font-medium flex justify-between items-center w-full p-4 px-5 bg-gradient-to-r from-red-950 to-rose-950 hover:from-red-700 hover:to-red-700 text-white focus:outline-none shadow-md shadow-zinc-900"
+      class="text-left rounded accordion-header font-medium flex justify-between items-center w-full p-4 md:px-5 bg-gradient-to-r from-red-950 to-rose-950 hover:from-red-700 hover:to-red-700 text-white focus:outline-none shadow-md shadow-zinc-900"
       (click)="toggleItem(i)">
       <span>{{ item.title }}</span>
       <!-- Arrow Icon -->
@@ -15,7 +15,7 @@
 
     <!-- Accordion Content -->
     <div *ngIf="item.isOpen"
-      class="accordion-content font-content px-4 py-3 font-base overflow-hiddenbackdrop-filter backdrop-blur-lg bg-gradient-to-tl from-zinc-950/40 from-10% to-neutral-800/40 to-90%  transition-all duration-200 rounded shadow-xs shadow-zinc-950/50">
+      class="accordion-content font-content px-4 py-3 font-base overflow-hiddenbackdrop-filter backdrop-blur-lg bg-gradient-to-tl from-zinc-950/40 from-10% to-neutral-800/40 to-90%  transition-all duration-200 md:rounded shadow-xs shadow-zinc-950/50">
       <div class="p-4" [innerHTML]="item.content">
         <!-- pogledaj innerHtml u ovom div-u korisno za ubacivanje html tagova u json fajl, npr <br> -->
       </div>
