--- a/src/app/features/faq/faq.component.html
+++ b/src/app/features/faq/faq.component.html
@@ -1,11 +1,11 @@
 <main>
     <div class="flex justify-center min-h-screen">
         <div
-            class="max-w-8xl w-full p-4 backdrop-filter backdrop-blur-lg bg-zinc-800/30 border-1 border-zinc-700/10 rounded-xl text-stone-100">
-            <h2 class="mb-4">{{ "COMMON_QUESTIONS" | translate }}</h2>
+            class="max-w-8xl w-full md:px-4 px-2 py-4 backdrop-filter backdrop-blur-lg bg-zinc-800/30 border-1 border-zinc-700/10 rounded-xl text-stone-100">
+            <h2 class="mb-4 mx-3 md:mx-0">{{ "COMMON_QUESTIONS" | translate }}</h2>
 
             <div *ngFor="let item of faqItems; let i = index"
-                class="backdrop-filter backdrop-blur-none font-content m-2 my-3">
+                class="backdrop-filter backdrop-blur-none font-content md:m-2 my-3">
                 <button
                     class="w-full flex justify-between items-center text-left font-medium text-lg py-3 px-4 bg-neutral-900 text-stone-200 !rounded-2xl shadow-md focus:outline-none"
                     (click)="toggleItem(i)">
