Improve nav bar dropdown styling for better visibility and aesthetics

--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -97,7 +97,7 @@
     <div
       *ngIf="navDropdownOpen"
       @listAnimation
-      class="absolute text-lg font-medium top-full right-0 left-0 bg-zinc-900/20 backdrop-filter backdrop-blur-2xl border-b border-zinc-800/50 shadow-md md:hidden"
+      class="absolute text-lg font-medium top-full right-0 left-0 bg-zinc-900/75 backdrop-filter backdrop-blur-lg shadow-md border-b border-zinc-700/10 md:hidden"
     >
       <ul
         (click)="toggleNavDropdown()"
