Hidden date and styled message text

--- a/src/app/features/announcements/announcements.component.html
+++ b/src/app/features/announcements/announcements.component.html
@@ -4,7 +4,7 @@
             <div *ngFor="let message of messages; let i = index" class="mb-2">
                 <div>
                     <!--<h4>{{ message.date }}</h4>-->
-                    <p class="text-white bg-red-700 border border-red-900 p-4 rounded-lg">{{ message.text }}</p>
+                    <p class="bg-gradient-to-r from-red-900 to-red-600 text-white p-6 rounded-xl border-2 border-red-800 shadow-2xl overflow-hidden">{{ message.text }}</p>
                 </div>
             </div>
         </div>
