--- a/src/app/features/media/media.component.html
+++ b/src/app/features/media/media.component.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <!-- Instagram Profiles -->
+  <!-- Instagram Profiles 
   <div class="container mx-auto px-4 mt-8">
     <div class="bg-transparent text-white p-4 font-mono">
       <div class="flex flex-wrap justify-center gap-4">
@@ -46,5 +46,73 @@
         </div>
       </div>
     </div>
+  </div> -->
+
+  <!-- Social Media -->
+  <div class="container mx-auto px-4 mt-8">
+    <!-- Instagram -->
+    <div class="mb-8">
+      <h2 class="text-2xl font-mono text-white mb-4 text-center">Instagram</h2>
+      <div class="bg-transparent text-white p-4 font-mono">
+        <div class="flex flex-wrap justify-center gap-4">
+          <div
+            *ngFor="let profile of instagramProfiles"
+            class="embed-container relative overflow-hidden h-[350px] rounded-br-[100px] transition-all duration-300 ease-in-out hover:rounded-tl-[10px] hover:rounded-none instagram-embed">
+            <blockquote
+              class="instagram-media"
+              [attr.data-instgrm-permalink]="'https://www.instagram.com/' + profile.username + '/'"
+              data-instgrm-version="14">
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- YouTube -->
+<div class="mb-8">
+  <h2 class="text-2xl font-mono text-white mb-4 text-center">YouTube</h2>
+  <div class="bg-transparent text-white p-4 font-mono">
+    <div class="flex flex-wrap justify-center gap-4">
+      <div
+        *ngFor="let channel of youtubeChannels"
+        class="embed-container relative overflow-hidden h-[350px] rounded-tl-[100px] transition-all duration-300 ease-in-out hover:rounded-br-[10px] hover:rounded-none youtube-embed">
+        <iframe
+          width="100%"
+          height="100%"
+          [src]="channel.embedUrl | safe"
+          title="YouTube channel videos"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
   </div>
+</div>
+
+
+    <!-- Twitter -->
+    <div class="mb-8">
+      <h2 class="text-2xl font-mono text-white mb-4 text-center">Twitter</h2>
+      <div class="bg-transparent text-white p-4 font-mono">
+        <div class="flex flex-wrap justify-center gap-4">
+          <div
+            *ngFor="let profile of twitterProfiles"
+            class="embed-container relative overflow-hidden h-[350px] rounded-bl-[100px] transition-all duration-300 ease-in-out hover:rounded-tr-[10px] hover:rounded-none twitter-embed">
+            <a 
+              class="twitter-timeline" 
+              [attr.href]="'https://twitter.com/' + profile.username + '?ref_src=twsrc%5Etfw'"
+              data-theme="dark"
+              data-tweet-limit="5"
+              data-chrome="nofooter noborders transparent"
+              data-height="500">
+              Tweets by {{profile.username}}
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </div>
+
 </div>
